--- a/public/content.css
+++ b/public/content.css
@@ -156,14 +156,20 @@
 }
 
 .sponsorSkreativKipNoticeParent, .sponsorSkreativKipNotice {
-	min-width: 350px;
-	max-width: 50%;
-
 	border-spacing: 5px 10px;
 	padding-left: 5px;
 	padding-right: 5px;
 
 	border-collapse: unset;
+}
+
+.sponsorSkreativKipNoticeParent {
+	min-width: 350px;
+	max-width: 50%;
+}
+
+.sponsorSkreativKipNotice {
+	width: 100%;
 }
 
 .sponsorSkreativKipNoticeTableContainer {
